k8s/ingress/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
# Routing got too difficult to do here, I even replaced Traefik with Nginx Ingress Controller and it was still a mess
# Honestly, I'd eventually like another attempt at this but for now this works
# TLDR is:
# /api /api/ /api/docs should redirect to web /docs/api
# We're doing the routing logic in Express/Axum directly
spec:
  rules:
    - host: "plutomi.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: "plutomi.com"
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
